--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vesp/nuxt-fontawesome": "^1.1.0",
+    "@vueuse/core": "^11.0.3",
     "nuxt": "^3.13.0",
     "vite-svg-loader": "^5.1.0",
     "vue": "latest",
