--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vesp/nuxt-fontawesome": "^1.1.0",
     "@vueuse/core": "^11.0.3",
     "nuxt": "^3.13.0",
+    "nuxt-rating": "^0.1.5",
     "vite-svg-loader": "^5.1.0",
     "vue": "latest",
     "vue-router": "latest"
